@@ -1,3 +1,5 @@
+* Use the right currency to compute  balance, debit/credit of accounts
+
 Version 1.2.0 - 2009-04-20
 * Bug fixes (see mercurial logs for details)
 * Allow egg installation
